Fix some inefficiencies